--- a/views/signUp.hbs
+++ b/views/signUp.hbs
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-<div class="container">
+<div class="">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container collapse navbar-collapse col-4">
             <a class="navbar-brand " href="#"><span class="text-capitalize display-4">{{title}}</span></a>
         </div>
     </nav>
-    <div class="container rounded-bottom bg-light ">
+    <div class=" rounded-bottom bg-light ">
         <br> <br> <br>
         <form action="/{{action}}" method="get" class=" container col-10">
             <input type="text" name="nId" value="{{idKH}}" class="form-control"style="display: none">
