--- a/views/signIn.hbs
+++ b/views/signIn.hbs
@@ -9,13 +9,13 @@
 
 <body>
 
-<div class="container">
+<div class="">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container collapse navbar-collapse col-4">
             <a class="navbar-brand " href="#"><span class="text-capitalize display-4">Đăng nhập</span></a>
         </div>
     </nav>
-    <div class="container rounded-bottom bg-light ">
+    <div class=" rounded-bottom bg-light ">
         <br> <br> <br>
         <form action="/index" method="get" class=" container col-10">
             <div class="form-group">
