--- a/views/uploadsanpham.hbs
+++ b/views/uploadsanpham.hbs
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class="container">
+<div class="">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="/index">BookManager</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -17,66 +17,101 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+
+            <ul class="  navbar-nav fmy-2 my-lg-0  mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/index">Admin</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/sanpham">Sản phẩm</a>
                 </li>
+            </ul>
+            <form class="form-inline">
+                <input class="form-control mr-sm-2" type="search" name="nameSP" placeholder="Nhập tên sản phẩm ..."
+                       aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" name="search" value="1" type="submit">Tìm kiếm
+                </button>
+            </form>
+            <ul class="  navbar-nav fmy-2 my-lg-0 ">
                 <li class="nav-item">
-                    <a class="nav-link" href="/quanlysanpham">Quản lý sản phẩm</a>
+                    <a class="nav-link" href="#">Giỏ hàng</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/uploadsanpham">Upload sản phẩm</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/danhsachkhachhang">Danh sách khách hàng</a>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-outline-dark text-light dropdown-toggle"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Tài khoản
+                        </button>
+                        <div class="dropdown-menu dropdown-menu-right">
+                            <a class="dropdown-item" href="#">Tài khoản của bạn</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Đăng xuất</a>
+                        </div>
+                    </div>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0" style="display: none">
-                <input class="form-control mr-sm-2" type="search" placeholder="Nhập tại đây ..." aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Tìm kiếm</button>
-            </form>
         </div>
     </nav>
 
+    <div class="row">
+        <div class="col-sm-2">
+            <div class="list-group">
 
-    <div class="container rounded-bottom bg-light ">
-        <br> <br>
-        <div style="display: {{status}}" class="alert alert-warning alert-dismissible fade show" role="alert">
-            {{data}}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+                <a href="/quanlysanpham" class="list-group-item list-group-item-action">
+                    Quản lý sản phẩm
+                </a>
+                <a href="/danhsachkhachhang" class="list-group-item list-group-item-action">
+                    Quản lý khách hàng
+                </a>
+                <a href="/uploadsanpham" class="list-group-item list-group-item-action">
+                    Upload sản phẩm
+                </a>
+                <a href="/sanpham" class="list-group-item list-group-item-action">
+                    Tài khoản quản trị
+                </a>
+            </div>
         </div>
-        <form action="" method="get" class=" container col-10">
-            <div class="form-group">
-                <label for="nameSP">Tên sản phẩm</label>
-                <input type="text" class="form-control"  name="nameSP">
-            </div>
-            <div class="form-group">
-                <label for="priceSP">Giá sản phẩm</label>
-                <input type="text" class="form-control" name="priceSP">
-            </div>
-            <div class="form-group">
-                <label for="exImage">Hình ảnh</label>
-                <input type="file" class="form-control-file" name="exImage">
-            </div>
-            <div class="form-group">
-                <label for="descriptionSP">Miêu tả sản phẩm</label>
-                <input type="text" class="form-control" name="descriptionSP">
-            </div>
-            <div class="form-group">
-                <label for="typeSP">Loại sản shẩm</label>
-                <input type="text" class="form-control" name="typeSP">
-            </div>
-            <div class="form-group">
-                <label for="slSP">Số lượng</label>
-                <input type="text" class="form-control" name="slSP">
-            </div>
-            <button type="submit"  name="sm" value="1"  class="btn btn-primary">Đăng</button>
-            <button type="reset" class="btn btn-primary">Hủy</button>
-        </form>
+        <div class="col-sm-10  rounded-bottom bg-light ">
+            <br> <br>
 
-        <br><br><br>
+            <form action="" method="get" class=" container col-10">
+                <div class="form-group">
+                    <label for="nameSP">Tên sản phẩm</label>
+                    <input type="text" class="form-control" name="nameSP">
+                </div>
+                <div class="form-group">
+                    <label for="priceSP">Giá sản phẩm</label>
+                    <input type="text" class="form-control" name="priceSP">
+                </div>
+                <div class="form-group">
+                    <label for="exImage">Hình ảnh</label>
+                    <input type="file" class="form-control-file" name="exImage">
+                </div>
+                <div class="form-group">
+                    <label for="descriptionSP">Miêu tả sản phẩm</label>
+                    <input type="text" class="form-control" name="descriptionSP">
+                </div>
+                <div class="form-group">
+                    <label for="typeSP">Loại sản shẩm</label>
+                    <input type="text" class="form-control" name="typeSP">
+                </div>
+                <div class="form-group">
+                    <label for="slSP">Số lượng</label>
+                    <input type="text" class="form-control" name="slSP">
+                </div>
+
+                <div style="display: {{status}}" class="alert alert-warning alert-dismissible fade show" role="alert">
+                    {{data}}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <button type="submit" name="sm" value="1" class="btn btn-primary">Đăng</button>
+                <button type="reset" class="btn btn-primary">Hủy</button>
+            </form>
+
+            <br><br><br>
+        </div>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
