add admin accout

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -67,7 +67,7 @@
                 <a href="/uploadsanpham" class="list-group-item list-group-item-action">
                     Upload sản phẩm
                 </a>
-                <a href="/sanpham" class="list-group-item list-group-item-action">
+                <a href="/createAdAc" class="list-group-item list-group-item-action">
                     Tài khoản quản trị
                 </a>
             </div>
