--- a/views/danhsachkhachhang.hbs
+++ b/views/danhsachkhachhang.hbs
@@ -67,14 +67,15 @@
                 <a href="/uploadsanpham" class="list-group-item list-group-item-action">
                     Upload sản phẩm
                 </a>
-                <a href="/sanpham" class="list-group-item list-group-item-action">
+                <a href="/createAdAc" class="list-group-item list-group-item-action">
                     Tài khoản quản trị
                 </a>
             </div>
         </div>
         <div class="col-sm-10 rounded-bottom bg-light ">
-            <br> <br>
-            <table class="table container col-10">
+
+            <hr>
+            <table class="table container">
                 <thead>
                 <tr>
                     <th scope="col">_id</th>
