--- a/views/quanlysanpham.hbs
+++ b/views/quanlysanpham.hbs
@@ -65,13 +65,14 @@
                 <a href="/uploadsanpham" class="list-group-item list-group-item-action">
                     Upload sản phẩm
                 </a>
-                <a href="/sanpham" class="list-group-item list-group-item-action">
+                <a href="/createAdAc" class="list-group-item list-group-item-action">
                     Tài khoản quản trị
                 </a>
             </div>
         </div>
         <div class="col-sm-10  rounded-bottom bg-light ">
-            <br> <br>
+            <hr>
+
             <table class="table container">
                 <thead>
                 <tr>
