--- a/views/uploadsanpham.hbs
+++ b/views/uploadsanpham.hbs
@@ -66,13 +66,13 @@
                 <a href="/uploadsanpham" class="list-group-item list-group-item-action">
                     Upload sản phẩm
                 </a>
-                <a href="/sanpham" class="list-group-item list-group-item-action">
+                <a href="/createAdAc" class="list-group-item list-group-item-action">
                     Tài khoản quản trị
                 </a>
             </div>
         </div>
         <div class="col-sm-10  rounded-bottom bg-light ">
-            <br> <br>
+            <hr>
 
             <form action="" method="get" class=" container col-10">
                 <div class="form-group">
