delete admin accout

--- a/views/createAdAc.hbs
+++ b/views/createAdAc.hbs
@@ -152,9 +152,9 @@
                             <div class="col-sm-3">
                                 <form action="/signUp" method="get">
                                     <div class="form-group" style="display: none">
-                                        <input type="text" name="idKH" value="{{this._id}}" class="form-control">
-                                        <input type="text" name="userKH" value="{{this.username}}" class="form-control">
-                                        <input type="text" name="passKH" value="{{this.password}}" class="form-control">
+                                        <input type="text" name="idAD" value="{{this._id}}" class="form-control">
+                                        <input type="text" name="userAD" value="{{this.username}}" class="form-control">
+                                        <input type="text" name="passAD" value="{{this.password}}" class="form-control">
                                     </div>
 
                                     <button type="submit" name="update" value="1" class="btn btn-warning">Sửa</button>
@@ -164,9 +164,7 @@
                             <div class="col-sm-5">
                                 <form>
                                     <div class="form-group" style="display: none">
-                                        <input type="text" name="idKH" value="{{this._id}}" class="form-control">
-                                        <input type="text" name="userKH" value="{{this.username}}" class="form-control">
-                                        <input type="text" name="passKH" value="{{this.password}}" class="form-control">
+                                        <input type="text" name="idAD" value="{{this._id}}" class="form-control">
                                     </div>
                                     <button type="submit" name="del" value="1" class="btn btn-danger">Xóa</button>
                                 </form>
