finish: add,update,delete of admins,users,products

--- a/views/signUp.hbs
+++ b/views/signUp.hbs
@@ -41,8 +41,8 @@
                     <button type="submit" name="update" value="1" class="btn btn-outline-dark col-sm-12 ">{{btnUD}}</button>
                 </div>
                 <div class="col-4">
-                    <button type="reset" id="cancel" class="btn btn-outline-dark col-sm-12">{{btnC}}
-                    </button>
+                    <a href="{{btnC}}" id="cancel" class="btn btn-outline-dark col-sm-12">Hủy
+                    </a>
                 </div>
             </div>
         </form>
