--- a/views/updatesanpham.hbs
+++ b/views/updatesanpham.hbs
@@ -72,7 +72,7 @@
             </div>
         </div>
         <div class="col-sm-10  rounded-bottom bg-light ">
-
+            <hr>
             <hr>
             <form action="/quanlysanpham" method="get" class=" container col-10">
                 <input type="text" name="nId" value="{{idSP}}" required class="form-control" style="display: none">
@@ -113,8 +113,8 @@
                                 class="btn btn-outline-dark col-sm-12 ">{{btnUD}}</button>
                     </div>
                     <div class="col-4">
-                        <button type="reset" id="cancel" class="btn btn-outline-dark col-sm-12">{{btnC}}
-                        </button>
+                        <a href="quanlysanpham" id="cancel" class="btn btn-outline-dark col-sm-12">Hủy
+                        </a>
                     </div>
                 </div>
             </form>
